# VideoCrop

./: CMakeLists.txt  VideoCrop.cpp
