CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

PROJECT (VideoCrop C CXX)

SET (CMAKE_BUILD_TYPE Release)
SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_DEFINITIONS ("-Wall -Wextra -Werror -Wno-unused-parameter")

FIND_PACKAGE (Threads	REQUIRED)
FIND_PACKAGE (OpenCV	REQUIRED)

INCLUDE_DIRECTORIES (${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE (videocrop VideoCrop.cpp)
TARGET_LINK_LIBRARIES (videocrop Threads::Threads ${OpenCV_LIBS})
